# BeanClock

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
kidage/: __init__.py  __main__.py  age.py  config.py  display.py  render.py  solar.py  special.py
scripts/: install.sh
systemd/: kidage.service  kidage.timer
tests/: test_age.py  test_config.py  test_display.py  test_main.py  test_render.py  test_solar.py  test_special.py
